--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,23 @@
     <title>MiniMash</title>
 </head>
 <body>
-    
+    <div id="home">
+        <h1>MiniMash</h1>
+        <button id="tictactoebtn">TicTacToe</button>
+        <button id="rockpaperscissorbtn">Rock, Paper, Scissors</button>
+        <button id="etch-a-sketchbtn">Etch-a-Sketch</button>
+    </div>
+
+    <div id="TicTacToe">
+
+    </div>
+
+    <div id="RockPaperScissors">
+
+    </div>
+
+    <div id="etch-a-sketch">
+
+    </div>
 </body>
 </html>
