--- a/src/index.html
+++ b/src/index.html
@@ -7,10 +7,13 @@
 </head>
 <body>
     <div id="home">
-        <h1>MiniMash</h1>
-        <button id="tictactoebtn">TicTacToe</button>
-        <button id="rockpaperscissorbtn">Rock, Paper, Scissors</button>
-        <button id="etch-a-sketchbtn">Etch-a-Sketch</button>
+        <h1 id="minimashtitle">MiniMash</h1>
+        <div id="buttonHolders">
+            <button id="tictactoebtn">TicTacToe</button>
+            <button id="rockpaperscissorbtn">Rock, Paper, Scissors</button>
+            <button id="etch-a-sketchbtn">Etch-a-Sketch</button>
+        </div>
+ 
     </div>
 
     <div id="TicTacToe">
