Add tictactoe image, added to button element

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
     <div id="home">
         <h1 id="minimashtitle">MiniMash</h1>
         <div id="buttonHolders">
-            <button id="tictactoebtn">TicTacToe</button>
+            <button id="tictactoebtn"> <img id="tictactoeimg" src="../Assets/tic-tac-toe.svg">TicTacToe</button>
             <button id="rockpaperscissorbtn">Rock, Paper, Scissors</button>
             <button id="etch-a-sketchbtn">Etch-a-Sketch</button>
         </div>
