--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
         <h1 id="minimashtitle">MiniMash</h1>
         <div id="buttonHolders">
             <button id="tictactoebtn"> <img id="tictactoeimg" src="../Assets/tic-tac-toe.svg">TicTacToe</button>
-            <button id="rockpaperscissorbtn">Rock, Paper, Scissors</button>
+            <button id="rockpaperscissorbtn"> <img id="rockpaperscissorsimg" src="../Assets/rock-paper-scissors_6832100.png" height="50px"><br>Rock, Paper, Scissors</button>
             <button id="etch-a-sketchbtn">Etch-a-Sketch</button>
         </div>
  
