Add etch-a-sketch image to button element

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
         <div id="buttonHolders">
             <button id="tictactoebtn"> <img id="tictactoeimg" src="../Assets/tic-tac-toe.svg">TicTacToe</button>
             <button id="rockpaperscissorbtn"> <img id="rockpaperscissorsimg" src="../Assets/rock-paper-scissors_6832100.png" height="50px"><br>Rock, Paper, Scissors</button>
-            <button id="etch-a-sketchbtn">Etch-a-Sketch</button>
+            <button id="etch-a-sketchbtn"> <img id="etch-a-sketchimg" src="../Assets/sketch-svgrepo-com.svg" height="50px"><br>Etch-a-Sketch</button>
         </div>
  
     </div>
