Add function to display tictactoe board when called

--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,23 @@
     </div>
 
     <div id="TicTacToe">
-
+        <p id="ticTacToeTitle">TicTacToe</p>
+        <div id="scoreBoard">
+            <p id="player1TicTacToe">Player1</p>
+            <p id="player2TicTacToe">Player2</p>
+        </div>
+        <div id="TicTacToeBoardDiv">
+            <div id="sqr1">1</div>
+            <div id="sqr2">2</div>
+            <div id="sqr3">3</div>
+            <div id="sqr4">4</div>
+            <div id="sqr5">5</div>
+            <div id="sqr6">6</div>
+            <div id="sqr7">7</div>
+            <div id="sqr8">8</div>
+            <div id="sqr9">9</div>
+        </div>
+        <button id="ticTacToeReset">Reset</button>
     </div>
 
     <div id="RockPaperScissors">
