--- a/src/index.html
+++ b/src/index.html
@@ -24,18 +24,20 @@
         </div>
 
         <div id="TicTacToeBoardDiv">
-            <div id="sqr1">1</div>
-            <div id="sqr2">2</div>
-            <div id="sqr3">3</div>
-            <div id="sqr4">4</div>
-            <div id="sqr5">5</div>
-            <div id="sqr6">6</div>
-            <div id="sqr7">7</div>
-            <div id="sqr8">8</div>
-            <div id="sqr9">9</div>
+            <div id="sqr1"></div>
+            <div id="sqr2"></div>
+            <div id="sqr3"></div>
+            <div id="sqr4"></div>
+            <div id="sqr5"></div>
+            <div id="sqr6"></div>
+            <div id="sqr7"></div>
+            <div id="sqr8"></div>
+            <div id="sqr9"></div>
         </div>
-        
+
         <button id="ticTacToeReset">Reset</button>
+        <br>
+        <button id="ticTacToeClose">Close</button>
     </div>
 
     <div id="RockPaperScissors">
